2008-03-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/Utilities.cs, src/TaskTreeView.cs: Moved ParseTaskText method
	  from TaskTreeView to Utilities.
	* src/TaskWindow.cs: Parse newly entered task text for due date
	  information.

2008-03-13  Boyd Timothy <btimothy@gmail.com> 

	* src/TaskGroup.cs: Add an entry widget at the top of the window for users
	  to create new tasks.  Don't scroll automatically to a newly created task
	  (scrolling still needs to be fixed). Highlight the newly-created task. 
	  Put "New task..." in the entry box and highlight it by default and right
	  after a task is created.

2008-03-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* data/images/tasque.svg: Cleaner SVG courtesy of Jakub Steiner.

2008-03-13  Boyd Timothy <btimothy@gmail.com> 

	* AUTHORS: Added Sandy as an author.

2008-03-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* src/TaskTreeView.cs: Support for parsing due date out of undated
	  tasks.  Currently handles "today", "tomorrow", and anything
	  understood by DateTime.Parse.  Favors future dates, but will obey a
	  year if one is specified.
	* src/Preferences.cs: Added hidden preference for enabling due date
	  parsing, which defaults to true.  Added support for preference
	  defaults.  Changed a bunch of static strings to const strings in
	  support of this.

2008-03-12  Calvin Gaisford <calvinrg@gmail.com> 

	* configure.ac: Bumped to 0.1.6

2008-03-12  Calvin Gaisford <calvinrg@gmail.com> 

	* NEWS: Updated NEWS for release 0.1.5

2008-03-12  Calvin Gaisford <calvinrg@gmail.com> 

	* src/Application.cs: Updated the About dialog with the correct project
	  location

2008-03-12  Calvin Gaisford <calvinrg@gmail.com> 

	* src/TaskWindow.cs: Fixed the main window icon to be larger

2008-03-12  Calvin Gaisford <calvinrg@gmail.com> 

	* src/PreferencesDialog.cs, src/AllCategory.cs, src/TaskWindow.cs,
	  src/Preferences.cs: Modified the preferences so there is a